--- a/src/components/card-book/card-book.pug
+++ b/src/components/card-book/card-book.pug
@@ -38,8 +38,8 @@ mixin card-book(details)
           .card-book__calc-item
             span.card-book__calc-option
               | Сбор за услуги: 
-              span.card-book__discont.js-card-book__discont
-                | скидка #{details.discont}
+              span.card-book__discount.js-card-book__discount
+                | скидка #{details.discount}
                 span.card-book__rub
                   | ₽
             span.card-book__calc-info
