--- a/src/components/card-checkin/card-checkin.scss
+++ b/src/components/card-checkin/card-checkin.scss
@@ -1,5 +1,5 @@
 .card-checkin {
-  background-color: $white;
+  background-color: $bg-color-primary;
   max-width: 380px;
   width: 100%;
   border-radius: 4px;
@@ -9,11 +9,12 @@
     padding: 40px 30px 30px 30px;
   }
   &__title {
-    @include MontBold;
+    font-family: $font-family-primary;
+    font-weight: $bold;
     font-size: 24px;
     line-height: 29px;
     margin-bottom: 20px;
-    @media (max-width: $phoneWidth) {
+    @media (max-width: $phone-width) {
       font-size: 20px;
       line-height: 25px;
       margin-bottom: 10px;
@@ -41,7 +42,7 @@
   }
   &__sign-in-text {
     font-size: 14px;
-    @media (max-width: $phoneWidth) {
+    @media (max-width: $phone-width) {
       font-size: 12px;
     }
   }
