--- a/src/components/rate-buttons/rate-buttons.scss
+++ b/src/components/rate-buttons/rate-buttons.scss
@@ -5,7 +5,7 @@
     display: flex;
 
     &:focus {
-      outline: 2px solid $purple;
+      outline: 2px solid $primary-color;
     }
   }
   &__input {
