--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: flex-start;
     margin-bottom: 10px;
-    @media (max-width: $phoneWidth) {
+    @media (max-width: $phone-width) {
       margin-bottom: 5px;
     }
     &:last-child {
@@ -17,23 +17,23 @@
       height: 10px;
       min-width: 10px;
       min-width: 10px;
-      background-color: $ds25;
+      background-color: $text-color-brightness-25;
       border-radius: 50%;
       margin-right: 10px;
       margin-top: 5px;
-      @media (max-width: $phoneWidth) {
+      @media (max-width: $phone-width) {
         margin-right: 5px;
       }
     }
   }
   &__text {
-    @include Mont;
+    font-family: $font-family-primary;
     font-size: 14px;
-    color: $ds75;
+    color: $text-color-brightness-75;
     white-space: pre;
     line-height: 24px;
     white-space: pre-wrap;
-    @media (max-width: $phoneWidth) {
+    @media (max-width: $phone-width) {
       font-size: 12px;
       line-height: 20px;
     }
