--- a/src/components/card-selection/card-selection.scss
+++ b/src/components/card-selection/card-selection.scss
@@ -1,28 +1,29 @@
 .card-selection {
-  background-color: $white;
+  background-color: $bg-color-primary;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.12);
   max-width: 380px;
   width: 100%;
-  @media (max-width: $phoneWidth) {
+  @media (max-width: $phone-width) {
     max-width: 320px;
     margin: 0 auto;
   }
   &__content {
     padding: 40px 30px 30px;
-    @media (max-width: $phoneWidth) {
+    @media (max-width: $phone-width) {
       padding: 30px 20px 30px;
     }
   }
   &__title {
-    @include MontBold;
+    font-family: $font-family-primary;
+    font-weight: $bold;
     font-size: 24px;
     line-height: 29px;
     text-transform: initial;
     display: inline-block;
     margin-bottom: 20px;
-    @media (max-width: $phoneWidth) {
+    @media (max-width: $phone-width) {
       font-size: 20px;
       line-height: 25px;
       margin-bottom: 15px;
@@ -31,7 +32,7 @@
   &__block {
     &_margin-b-15 {
       margin-bottom: 15px;
-      @media (max-width: $phoneWidth) {
+      @media (max-width: $phone-width) {
         margin-bottom: 0;
       }
     }
