--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,14 +2,14 @@
   $self: &;
   background-color: #fff;
   box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
-  color: $ds75;
+  color: $text-color-brightness-75;
   font-size: 14px;
   white-space: pre-wrap;
   flex: 0 0 auto;
-  @media (max-width: $smDesktopWidth) {
+  @media (max-width: $sm-desktop-width) {
     padding: 120px 0;
   }
-  @media (max-width: $phoneWidth) {
+  @media (max-width: $phone-width) {
     font-size: 12px;
     padding: 50px;
   }
@@ -18,7 +18,7 @@
     padding-bottom: 140px;
     display: flex;
     justify-content: space-between;
-    @media (max-width: $smDesktopWidth) {
+    @media (max-width: $sm-desktop-width) {
       justify-content: center;
       padding-bottom: 0;
       padding: 0;
@@ -26,26 +26,26 @@
   }
   &__block-text {
     max-width: 260px;
-    @media (max-widh: $smDesktopWidth) {
+    @media (max-widh: $sm-desktop-width) {
       text-align: center;
     }
   }
   &__logo {
     margin-bottom: 20px;
-    @media (max-width: $smDesktopWidth) {
+    @media (max-width: $sm-desktop-width) {
       margin-bottom: 0;
     }
   }
   &__achivement {
     line-height: 24px;
     white-space: pre-wrap;
-    @media (max-width: $smDesktopWidth) {
+    @media (max-width: $sm-desktop-width) {
       display: none;
     }
   }
   &__list {
     max-width: 150px;
-    @media (max-width: $smDesktopWidth) {
+    @media (max-width: $sm-desktop-width) {
       display: none;
     }
   }
@@ -56,11 +56,11 @@
     }
   }
   &__link {
-    color: $ds75;
+    color: $text-color-brightness-75;
   }
   &__subscribe {
     max-width: 260px;
-    @media (max-width: $smDesktopWidth) {
+    @media (max-width: $sm-desktop-width) {
       display: none;
     }
   }
@@ -73,7 +73,7 @@
   }
   &__basement {
     border-top: 1px solid rgba(31, 32, 65, 0.1);
-    @media (max-width: $smDesktopWidth) {
+    @media (max-width: $sm-desktop-width) {
       border: none;
       padding-top: 20px;
     }
@@ -83,7 +83,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 23px 0;
-    @media (max-width: $smDesktopWidth) {
+    @media (max-width: $sm-desktop-width) {
       display: block;
       text-align: center;
       padding: 0;
@@ -93,7 +93,7 @@
     line-height: 17px;
   }
   &__social {
-    @media (max-width: $smDesktopWidth) {
+    @media (max-width: $sm-desktop-width) {
       margin-top: 20px;
     }
   }
