--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -7,8 +7,8 @@
   }
   &__values {
     font-size: 12px;
-    color: $ds50;
-    @media (max-width: $phoneWidth) {
+    color: $text-color-brightness-50;
+    @media (max-width: $phone-width) {
       font-size: 10px;
     }
   }
@@ -21,22 +21,22 @@
 }
 .irs--round .irs-line {
   background-color: #fff;
-  border: 1px solid $ds25;
+  border: 1px solid $text-color-brightness-25;
   height: 6px;
   top: 0;
 }
 .irs--round .irs-bar {
-  background: $greenGr;
+  background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
   top: 0;
   height: 6px;
 }
 
 .irs--round .irs-handle {
   top: -4.5px;
-  border: 2px solid $white;
+  border: 2px solid #fff;
   width: 15px;
   height: 15px;
-  background: $greenGr;
+  background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
   box-shadow: none;
   cursor: pointer;
 }
