--- a/src/components/rich-list/rich-list.scss
+++ b/src/components/rich-list/rich-list.scss
@@ -17,30 +17,31 @@
     display: inline-block;
     min-width: 20px;
     min-height: 20px;
-    border: $border;
+    border: $border-input;
     border-radius: 4px;
     margin-right: 10px;
     &:focus {
-      border: $borderHover;
+      border: $border-input-hover;
     }
   }
   &__head {
-    @include MontBold;
-    color: $ds75;
+    font-family: $font-family-primary;
+    font-weight: $bold;
+    color: $text-color-brightness-75;
     text-transform: uppercase;
     font-size: 12px;
     white-space: pre;
     line-height: 18px;
-    @media (max-width: $phoneWidth) {
+    @media (max-width: $phone-width) {
       font-size: 10px;
     }
   }
   &__description {
     font-size: 12px;
-    color: $ds50;
+    color: $text-color-brightness-50;
     line-height: 14px;
     white-space: pre-wrap;
-    @media (max-width: $phoneWidth) {
+    @media (max-width: $phone-width) {
       font-size: 10px;
       line-height: 12px;
     }
@@ -49,7 +50,7 @@
     display: none;
   }
   input:checked + span {
-    border-color: $purple;
+    border-color: $primary-color;
     background-image: url('./assets/img/Vector.jpg');
     background-repeat: no-repeat;
     background-position: 50% 50%;
