--- a/src/pages/landing-page/landing-page.scss
+++ b/src/pages/landing-page/landing-page.scss
@@ -7,7 +7,7 @@
   background-position: center;
   min-height: calc(100vh - 20px);
   padding-top: 70px;
-  @media (min-width: $smDesktopWidth) {
+  @media (min-width: $sm-desktop-width) {
     background-size: cover;
   }
   &__main {
@@ -20,7 +20,7 @@
     white-space: pre-wrap;
     font-size: 14px;
     line-height: 24px;
-    color: $ds75;
+    color: $text-color-brightness-75;
     align-self: flex-end;
   }
 }
