--- a/src/utils/utils-scss/button.scss
+++ b/src/utils/utils-scss/button.scss
@@ -4,16 +4,17 @@
 .button {
   display: inline-block;
   padding: 15px 20px;
-  background: $purpleGr;
+  background: $button-color-primary;
   border-radius: 22px;
-  color: $white;
+  color: $button-text-color-primary;
   text-transform: uppercase;
-  @include MontBold;
+  font-family: $font-family-primary;
+  font-weight: $bold;
   font-size: 12px;
-  transition: $trFast;
+  transition: $tr-fast;
   cursor: pointer;
   line-height: 1;
-  @media (max-width: $phoneWidth) {
+  @media (max-width: $phone-width) {
     font-size: 10px;
   }
   &:hover {
@@ -55,24 +56,24 @@
     cursor: pointer;
     position: relative;
     z-index: 10;
-    transition: $trFast;
-    color: $purple;
+    transition: $tr-fast;
+    color: $button-text-color-secondary;
     font-size: 12px;
     background: none;
-    @media (max-width: $phoneWidth) {
+    @media (max-width: $phone-width) {
       font-size: 10px;
     }
     &:before {
       content: '';
       position: absolute;
-      background: $purple;
+      background: $button-text-color-secondary;
       left: 0;
       right: 0;
       bottom: 0;
       top: 0;
       z-index: -1;
       border-radius: 22px;
-      transition: $trFast;
+      transition: $tr-fast;
     }
     &:after {
       content: '';
@@ -83,8 +84,8 @@
       top: 2px;
       z-index: -1;
       border-radius: 22px;
-      background: $white;
-      transition: $trFast;
+      background: #fff;
+      transition: $tr-fast;
     }
     &:hover {
       opacity: 1;
@@ -97,16 +98,16 @@
     background: none;
     padding: 0;
     border-radius: 0;
-    color: $purple;
+    color: $button-text-color-secondary;
     &:hover {
       opacity: 1;
-      color: $ds50;
+      color: $text-color-brightness-50;
     }
   }
   &_no-bg-grey {
-    color: $ds50;
+    color: $text-color-brightness-50;
     &:hover {
-      color: $ds50;
+      color: $text-color-brightness-50;
       background: none;
     }
   }
